--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>متجر لورين للجمال</title>
+  <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="منتج لورين" style="width:100%; border-radius:12px; margin-bottom:15px;">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -179,4 +180,5 @@
   </footer>
 
 </body>
+
 </html>
