--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>متجر لورين للجمال</title>
-  <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="منتج لورين" style="width:100%; border-radius:12px; margin-bottom:15px;">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -128,9 +127,63 @@
   </section>
 
   <section>
-    <div class="product">
-  <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="كريم لورين" style="width:100%; border-radius:12px; margin-bottom:15px;">
-  <h3>كريم لورين لتفتيح البشرة</h3>
-  <p>يساعد على توحيد لون البشرة ويمنحها إشراقة طبيعية.</p>
-  <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء كريم لورين">اطلب عبر واتساب</a>
-</div>
+    <h2 class="section-title">منتجاتنا</h2>
+    <div class="container">
+      <div class="product">
+        <img src="images/argan.jpg" alt="زيت الأرغان المغربي">
+        <h3>زيت الأرغان المغربي</h3>
+        <p>يغذي الشعر ويمنحه لمعاناً طبيعياً.</p>
+        <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء زيت الأرغان المغربي">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="images/coconut.jpg" alt="زيت جوز الهند الطبيعي">
+        <h3>زيت جوز الهند الطبيعي</h3>
+        <p>يرطب فروة الرأس ويقوي الشعر من الجذور.</p>
+        <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء زيت جوز الهند الطبيعي">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="images/aloe.jpg" alt="كريم الألوفيرا لترطيب البشرة">
+        <h3>كريم الألوفيرا لترطيب البشرة</h3>
+        <p>يمنح بشرتك ترطيباً عميقاً وانتعاشاً يدوم طويلاً.</p>
+        <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء كريم الألوفيرا">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="images/papaya-cream.jpg" alt="كريم البابايا لتفتيح البشرة">
+        <h3>كريم البابايا لتفتيح البشرة</h3>
+        <p>يساعد على توحيد لون البشرة ويمنحها إشراقة طبيعية.</p>
+        <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء كريم البابايا">اطلب عبر واتساب</a>
+      </div>
+
+      <div class="product">
+        <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="كريم لورين لتفتيح البشرة" style="width:100%; border-radius:12px; margin-bottom:15px;">
+        <h3>كريم لورين لتفتيح البشرة</h3>
+        <p>يساعد على توحيد لون البشرة ويمنحها إشراقة طبيعية.</p>
+        <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء كريم لورين لتفتيح البشرة">اطلب عبر واتساب</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">آراء العملاء</h2>
+    <div class="testimonial">
+      <p>🌟 "منتجات رائعة! زيت الأرغان فعلاً غير شعري للأفضل." – سارة من دمشق</p>
+    </div>
+    <div class="testimonial">
+      <p>🌟 "كريم الألوفيرا منع جفاف بشرتي تماماً. شكراً لورين!" – ريم من اللاذقية</p>
+    </div>
+  </section>
+
+  <footer>
+    جميع الحقوق محفوظة © متجر لورين للجمال 2025
+    <div class="social-links">
+      تابعونا على:
+      <a href="https://www.instagram.com/makera_lama?igsh=ZnFrNmJzOWl3dGg0" target="_blank">إنستغرام</a> |
+      <a href="https://www.facebook.com/share/1FZVvnvrXc/" target="_blank">فيسبوك</a>
+    </div>
+  </footer>
+
+</body>
+</html>
