--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>متجر لورين للجمال</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -15,21 +16,39 @@
     header {
       background: linear-gradient(90deg, #ff69b4, #ff1493);
       color: white;
-      padding: 30px 0;
-      font-size: 32px;
+      padding: 20px;
+      font-size: 28px;
       font-weight: bold;
       text-align: center;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
 
+    nav {
+      text-align: center;
+      background-color: #fff0f5;
+      padding: 10px;
+      font-size: 16px;
+    }
+
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #d63384;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #ff1493;
+    }
+
     section {
-      padding: 40px 20px;
+      padding: 30px 15px;
       text-align: center;
     }
 
     .section-title {
-      font-size: 28px;
-      margin-bottom: 20px;
+      font-size: 24px;
+      margin-bottom: 15px;
       color: #d63384;
     }
 
@@ -62,10 +81,11 @@
     .product h3 {
       color: #d63384;
       margin-bottom: 10px;
+      font-size: 20px;
     }
 
     .product p {
-      font-size: 15px;
+      font-size: 14px;
       margin-bottom: 15px;
     }
 
@@ -76,12 +96,8 @@
       border: none;
       border-radius: 8px;
       text-decoration: none;
-      font-size: 16px;
-      transition: background-color 0.3s;
-    }
-
-    .whatsapp-button:hover {
-      background-color: #1ebe5d;
+      font-size: 15px;
+      display: inline-block;
     }
 
     .testimonial {
@@ -89,37 +105,68 @@
       border-radius: 12px;
       padding: 20px;
       margin: 10px auto;
-      width: 80%;
+      width: 90%;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      font-size: 14px;
     }
 
     footer {
       background-color: #ffb6c1;
       text-align: center;
       padding: 20px;
-      font-size: 14px;
+      font-size: 13px;
       color: #4a004a;
     }
 
-    .social-links {
-      margin-top: 10px;
-    }
-
-    .social-links a {
+    .footer-links a {
       margin: 0 10px;
       text-decoration: none;
       color: #4a004a;
       font-weight: bold;
     }
 
-    .social-links a:hover {
+    .footer-links a:hover {
       color: #ff1493;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        font-size: 24px;
+        padding: 15px;
+      }
+
+      .product {
+        width: 90%;
+      }
+
+      .section-title {
+        font-size: 20px;
+      }
+
+      .product h3 {
+        font-size: 18px;
+      }
+
+      .product p {
+        font-size: 13px;
+      }
+
+      .whatsapp-button {
+        font-size: 14px;
+        padding: 8px 14px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>متجر لورين للجمال</header>
+
+  <nav>
+    <a href="contact.html">تواصل معنا</a>
+    <a href="terms.html">شروط الاستخدام</a>
+    <a href="privacy.html">سياسة الخصوصية</a>
+  </nav>
 
   <section>
     <h2 class="section-title">من نحن</h2>
@@ -158,7 +205,7 @@
       </div>
 
       <div class="product">
-        <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="كريم لورين لتفتيح البشرة" style="width:100%; border-radius:12px; margin-bottom:15px;">
+        <img src="https://raw.githubusercontent.com/bdalrhmnhmzt13-glitch/matgr/main/lolo-store.webp" alt="كريم لورين لتفتيح البشرة">
         <h3>كريم لورين لتفتيح البشرة</h3>
         <p>يساعد على توحيد لون البشرة ويمنحها إشراقة طبيعية.</p>
         <a class="whatsapp-button" href="https://wa.me/963985593002?text=أرغب بشراء كريم لورين لتفتيح البشرة">اطلب عبر واتساب</a>
@@ -178,10 +225,10 @@
 
   <footer>
     جميع الحقوق محفوظة © متجر لورين للجمال 2025
-    <div class="social-links">
-      تابعونا على:
-      <a href="https://www.instagram.com/makera_lama?igsh=ZnFrNmJzOWl3dGg0" target="_blank">إنستغرام</a> |
-      <a href="https://www.facebook.com/share/1FZVvnvrXc/" target="_blank">فيسبوك</a>
+    <div class="footer-links">
+      <a href="contact.html">تواصل معنا</a> |
+      <a href="terms.html">شروط الاستخدام</a> |
+      <a href="privacy.html">سياسة الخصوصية</a>
     </div>
   </footer>
 
